2006-03-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/com/fluendo/plugin/AudioSink.java:
	(AudioSink.RingBuffer.acquire):
	* src/com/fluendo/plugin/OggDemux.java:
	(OggDemux...OggStream.pushPacket):
	* src/com/fluendo/plugin/TheoraDec.java: (TheoraDec.),
	(TheoraDec..getFirstTs):
	* src/com/fluendo/plugin/VorbisDec.java: (VorbisDec.),
	(VorbisDec..getFirstTs):
	  Fix some warnings

2006-03-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.xml:
	  apparently 1.2 is not accepted, and it needs to be 1.3 ? Hope this
	  is ok, need to double check on 1.1 VM's.

2006-03-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* build.xml:
	  add source="1.2" to javac targets, because some javac's and ant
	  complain about this

2006-03-20  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/plugin/HTTPSrc.java: (HTTPSrc.Pad), (HTTPSrc),
	(HTTPSrc.getInputStream):
	Do typefind on the data instead of trusting the servers
	contentType. Fixes #317

	* src/com/fluendo/plugin/OggDemux.java: (OggDemux),
	(OggDemux...OggStream.getMime):
	Implement typeFind function.

2006-03-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile:
	  removed
	* build.xml:
	  added dist, distcheck and distclean targets

2006-03-20  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Pad.java: (Pad.Pad), (Pad.eventFunc), (Pad),
	(Pad.sendEvent):
	Don't crash when printing a pad name without parent.
	Grab streamLock when needed.

	* src/com/fluendo/player/Cortado.java: (Cortado.init):
	Build pipeline after we have the needed infrastructure to
	handle errors and such.

	* src/com/fluendo/player/CortadoPipeline.java:
	(CortadoPipeline.padAdded), (CortadoPipeline.setBufferLow),
	(CortadoPipeline), (CortadoPipeline.getBufferLow),
	(CortadoPipeline.setBufferHigh), (CortadoPipeline.getBufferHigh),
	(CortadoPipeline.buildOgg), (CortadoPipeline.buildMultipart),
	(CortadoPipeline.capsChanged), (CortadoPipeline.noSuchElement),